switch preferred provider to full mesa. Not sure if it should be nvidia-display

--- a/conf/machine/ion330.conf
+++ b/conf/machine/ion330.conf
@@ -33,9 +33,9 @@ XSERVER = "xserver-xorg \
            xf86-input-evdev \
            "
 
-PREFERRED_PROVIDER_virtual/libgl = "mesa-gl"
-PREFERRED_PROVIDER_virtual/mesa = "mesa-gl"
-PREFERRED_PROVIDER_virtual/libgles1 = "none"
-PREFERRED_PROVIDER_virtual/libgles2 = "none"
-PREFERRED_PROVIDER_virtual/egl = "none"
+PREFERRED_PROVIDER_virtual/libgl = "mesa"
+PREFERRED_PROVIDER_virtual/mesa = "mesa"
+PREFERRED_PROVIDER_virtual/libgles1 = "mesa"
+PREFERRED_PROVIDER_virtual/libgles2 = "mesa"
+PREFERRED_PROVIDER_virtual/egl = "mesa"
 APPEND += "video=vesafb vga=0x318"
