move to nvidia gl

--- a/conf/machine/ion330.conf
+++ b/conf/machine/ion330.conf
@@ -33,9 +33,10 @@ XSERVER = "xserver-xorg \
            xf86-input-evdev \
            "
 
-PREFERRED_PROVIDER_virtual/libgl = "mesa"
+PREFERRED_PROVIDER_virtual/libgl = "nvidia-display"
 PREFERRED_PROVIDER_virtual/mesa = "mesa"
-PREFERRED_PROVIDER_virtual/libgles1 = "mesa"
-PREFERRED_PROVIDER_virtual/libgles2 = "mesa"
-PREFERRED_PROVIDER_virtual/egl = "mesa"
+PREFERRED_PROVIDER_virtual/libgles1 = ""
+PREFERRED_PROVIDER_virtual/libgles2 = ""
+PREFERRED_PROVIDER_virtual/egl = "nvidia-display"
+PREFERRED_PROVIDER_virtual/libvdpau = "nvidia-display"
 APPEND += "video=vesafb vga=0x318"
