xserver-xf86-config: add xorg.conf for tv

--- a/recipes-graphics/xorg-xserver/xserver-xf86-config/ion330/xorg.conf
+++ b/recipes-graphics/xorg-xserver/xserver-xf86-config/ion330/xorg.conf
@@ -1,22 +1,106 @@
 Section "Device"
-    Identifier    "gma500"
-    Driver        "modesetting"
-    Option        "SWCursor"       "ON"
+    Identifier     "nvidia"
+    Driver         "nvidia"
+    Option         "DynamicTwinView" "False"
+    Option         "NoFlip" "false"
+    Option         "NoLogo" "true"
+    Option         "ConnectToAcpid" "0"
+    Option         "FlatPanelProperties" "Scaling = Native"
+    Option	   "UseEDID" "false"
+    Option	   "ModeValidation" "AllowInterlacedModes,NoPredefinedModes,NoXServerModes,NoEdidModes,NoVesaModes,AllowNon60HzDFPModes,NoVertRefreshCheck,NoHorizSyncCheck"
+    Option         "HWCursor" "false"
+    Option	   "DPI" "100 x 100"
 EndSection
 
 Section "Monitor"
-    Identifier    "Generic Monitor"
-    Option        "DPMS"
+    Identifier	  "televizor"
+    VendorName	  "Unknown"
+    HorizSync 14.0 - 20.0
+    VertRefresh 45.0 - 65.0
+#    Modeline "800x576pali" 15.38  800 823 895 984  576 580 583 625 -hsync -vsync interlace
+#    Modeline "800x288pal-half"  15.38  800 823 895 984  288 290 292 313 -hsync -vsync
+#    Modeline "768x576pali" 14.76  768 789 858 944  576 580 583 625 -hsync -vsync interlace
+# working modeline !!!
+    Modeline "720x540iva" 15.38  720 783 855 984  540 566 569 625 -hsync -vsync interlace
+# another working modeline
+    Modeline "720x576iva" 15.125 720 774 846 968  576 579 581 625 -hsync -vsync interlace
+    Modeline "768x576iva" 16.125 768 826 903 1032  576 579 581 625 -hsync -vsync interlace
+#    Modeline "648x536iva-nice" 13.875  648 702 768 888  536 564 567 625 -hsync -vsync interlace
+#    Modeline "768x288pal-half"  14.76  768 789 858 944  288 290 292 313 -hsync -vsync
+#    Modeline "720x576pali" 13.88  720 742 808 888  576 580 583 625 -hsync -vsync interlace
+#    Modeline "720x288pal-half"  13.88  720 742 808 888  288 290 292 313 -hsync -vsync
+#    Modeline "704x576pali" 13.50  704 722 786 864  576 580 583 625 -hsync -vsync interlace
+#    Modeline "704x288pal-half"  13.50  704 722 786 864  288 290 292 313 -hsync -vsync
+#    Modeline "650x576pali" 12.50  650 669 728 800  576 580 583 625 -hsync -vsync interlace
+#    Modeline "720x576@25i" 13.50 720 732 795 864 576 581 586 625 -hsync -vsync interlace
+#Modeline "800x480ntsci" 15.10  800 808 879 960  480 484 487 525 -hsync -vsync interlace
+#Modeline "800x240ntsc-half"  15.10  800 808 879 960  240 242 244 263 -hsync -vsync
+#Modeline "720x480ntsci" 13.59  720 727 791 864  480 484 487 525 -hsync -vsync interlace
+#Modeline "720x240ntsc-half"  13.59  720 727 791 864  240 242 244 263 -hsync -vsync
+#Modeline "704x480ntsci" 13.34  704 714 776 848  480 484 487 525 -hsync -vsync interlace
+#Modeline "704x240ntsc-half"  13.34  704 714 776 848  240 242 244 263 -hsync -vsync
+#Modeline "657x480ntsci" 12.50  657 667 725 792  480 484 487 525 -hsync -vsync interlace
+#Modeline "657x240ntsc-half"  12.50  657 667 725 792  240 242 244 263 -hsync -vsync
+#Modeline "640x480ntsci" 11.32  640 646 703 786  480 484 487 525 -hsync -vsync interlace
+#Modeline "640x240ntsc-half"  11.32  640 646 703 786  240 242 244 263 -hsync -vsync
+#    DisplaySize 488 366
 EndSection
 
 Section "Screen"
-    Identifier    "Default Screen"
-    Device	  "gma500"
-    Monitor       "Generic Monitor"
-    DefaultDepth  24
+    Identifier     "screen"
+    Device         "nvidia"
+    Monitor	   "televizor"
+    DefaultDepth    24
+#    Option         "ColorRange" "Full"
+#    Option         "ColorRange" "Limited"
+#    Option         "ColorSpace" "RGB"
+    Option         "ColorSpace" "YCbCr444"
+    SubSection     "Display"
+        Depth       24
+        Modes	"768x576iva"
+#	Modes   "720x540iva"
+    EndSubSection
 EndSection
 
-Section "ServerLayout"
-    Identifier     "Default Layout"
-    Screen         "Default Screen"
+Section "Extensions"
+    Option         "Composite" "false"
 EndSection
+
+Section "InputClass"
+	Identifier "other keyboards"
+	MatchIsKeyboard "On"
+	Option "Ignore" "on"
+EndSection
+
+Section "InputClass"
+	Identifier "my keyboard"
+	Driver "evdev"
+#	MatchProduct "AT Translated Set 2 keyboard"
+#	MatchProduct "USB USB Keykoard"
+	Option "XkbRules" "xorg"
+	Option "XkbModel" "pc105"
+	Option "XkbLayout" "us,ru(winkeys)"
+	Option "XkbOptions" "grp:lwin_toggle,grp:switch,grp_led:caps,compose:ralt,terminate:ctrl_alt_bksp"
+	Option "AutoServerLayout" "on"
+	Option "SendCoreEvents" "on"
+	MatchIsKeyboard "on"
+	Option "Ignore" "off"
+EndSection
+Section "InputClass"
+        Identifier "remote control"
+        Driver "evdev"
+       	MatchProduct "Media Center Ed. eHome Infrared Remote Transceiver"
+#        Option "XkbRules" "xorg"
+#        Option "XkbModel" "pc105"
+#        Option "XkbLayout" "us,ru(winkeys)"
+#        Option "XkbOptions" "grp:lwin_toggle,grp:switch,grp_led:caps,compose:ralt,terminate:ctrl_alt_bksp"
+        Option "AutoServerLayout" "on"
+        Option "SendCoreEvents" "on"
+        MatchIsKeyboard "on"
+        Option "Ignore" "off"
+EndSection
+
+Section "ServerFlags"
+	Option "AllowEmptyInput" "True"
+EndSection
+
