--- a/conf/machine/ion330.conf
+++ b/conf/machine/ion330.conf
@@ -5,7 +5,8 @@
 
 #@DESCRIPTION: Machine configuration for nVidia ION 330 systems
 
-PREFERRED_VERSION_linux-yocto ?= "4.8%"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
+PREFERRED_VERSION_linux-yocto ?= "4.10%"
 DEFAULTTUNE ?= "atom"
 
 require conf/machine/include/meta-intel.inc
